--- a/JenkinsDemo2/pom.xml
+++ b/JenkinsDemo2/pom.xml
@@ -23,8 +23,12 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>${xmlFiles}</suiteXmlFile>
 					</suiteXmlFiles>
+					<systemPropertyVariables>
+					<executionBrowser>${browser}</executionBrowser>
+					<appURL>${url}</appURL>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 		</plugins>
